// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerHeader component should match snapshot - DrawerHeader Avatar Image: DrawerHeader with Image Avatar snapshot 1`] = `
<div
  className="NatDSDrawerHeader-root-1"
>
  <div
    className="MuiAvatar-root NatDsAvatar-root-3 MuiAvatar-circle NatDSDrawerHeader-avatar-2"
  >
    <img
      className="MuiAvatar-img"
      src="some_image"
    />
  </div>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Avatar Text: DrawerHeader with Text Avatar snapshot 1`] = `
<div
  className="NatDSDrawerHeader-root-1"
>
  <div
    className="MuiAvatar-root NatDsAvatar-root-5 MuiAvatar-circle NatDSDrawerHeader-avatar-2 MuiAvatar-colorDefault"
  >
    some_text
  </div>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Custom children: DrawerHeader with Custom children snapshot 1`] = `
<div
  className="NatDSDrawerHeader-root-1"
>
  <div>
    some custom children
  </div>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Subtitle: DrawerHeader with Subtitle snapshot 1`] = `
<div
  className="NatDSDrawerHeader-root-1"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
  >
    some_title
  </h6>
</div>
`;

exports[`DrawerHeader component should match snapshot - DrawerHeader Title: DrawerHeader with Title snapshot 1`] = `
<div
  className="NatDSDrawerHeader-root-1"
>
  <h5
    className="MuiTypography-root MuiTypography-h5"
  >
    some_title
  </h5>
</div>
`;
